--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>예쁜 만년필 고르기</title>
+    <title>아가들 소개</title>
 </head>
 <body>
     <h1>레아소금일동</h1>
